Fixed several problems after tests
Unit tests of contest:
- fixtures and seeds
- problems with public: false, which is not correctly handled in test environment
Postman tests
- signin_controller
- contests_controller
Started work on participants, not yet tested

--- a/test/fixtures/contests.yml
+++ b/test/fixtures/contests.yml
@@ -5,7 +5,7 @@ DemoMeisterschaft:
   name: Demoturnier Meisterschaft
   shortname: Demo Meisterschaft
   description: ''
-  contesttype: Group
+  contesttype: groups
   nbr_sets: 1
   public: false
   token_read: token1
@@ -16,7 +16,7 @@ RegressionMeisterschaft:
   name: Regressiontest Gruppe
   shortname: Regression Gruppe
   description: ''
-  contesttype: Group
+  contesttype: groups
   nbr_sets: 1
   public: false
   token_read: token3
