First (nonworking) drafts of controller tests
Simulated login for the tests and user authorization probably does not fit yet, so there are some authorization problems

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,8 +2,8 @@
 
 userOne:
   email: userOne@example.com
-  password_digest: MyString
+  password_digest: <%= BCrypt::Password.create('password', cost: 4) %>
 
 userTwo:
   email: userTwo@example.com
-  password_digest: MyString
+  password_digest: <%= BCrypt::Password.create('password', cost: 4) %>
