--- a/test/fixtures/contests.yml
+++ b/test/fixtures/contests.yml
@@ -1,22 +1,34 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 DemoMeisterschaft:
-  user_id: userOne
+  user: userOne
   name: Demoturnier Meisterschaft
   shortname: Demo Meisterschaft
   description: ''
-  contesttype: groups
+  contesttype: Groups
   nbr_sets: 1
   public: false
   token_read: token1
   token_write: token2
 
+DemoKO:
+  user: userOne
+  name: Demoturnier KO
+  shortname: Demo KO
+  description: ''
+  contesttype: KO
+  nbr_sets: 1
+  public: false
+  token_read: token1
+  token_write: token2
+
+
 RegressionMeisterschaft:
-  user_id: userTwo
+  user: userTwo
   name: Regressiontest Gruppe
   shortname: Regression Gruppe
   description: ''
-  contesttype: groups
+  contesttype: Groups
   nbr_sets: 1
   public: false
   token_read: token3
