--- a/test/fixtures/contests.yml
+++ b/test/fixtures/contests.yml
@@ -4,32 +4,32 @@ DemoMeisterschaft:
   user: userOne
   name: Demoturnier Meisterschaft
   shortname: Demo Meisterschaft
-  description: ''
+  description: Demoturnier Meisterschaft Beschreibung
   contesttype: Groups
   nbr_sets: 1
   public: false
-  token_read: token1
-  token_write: token2
+  token_read: readToken1
+  token_write: writeToken1
 
 DemoKO:
   user: userOne
   name: Demoturnier KO
   shortname: Demo KO
-  description: ''
+  description: Demoturnier KO Beschreibung
   contesttype: KO
   nbr_sets: 1
   public: false
-  token_read: token1
-  token_write: token2
+  token_read: readToken2
+  token_write: readToken2
 
 
 RegressionMeisterschaft:
   user: userTwo
   name: Regressiontest Gruppe
   shortname: Regression Gruppe
-  description: ''
+  description: Regressiontest Gruppe Beschreibung
   contesttype: Groups
   nbr_sets: 1
   public: false
-  token_read: token3
-  token_write: token4
+  token_read: readToken3
+  token_write: writeToken3
