Refactoring of some json fields in schema and code
New field Contest.result_params, which took over 'points' settings and nbr_sets
Renaming of contesttype(_params) to ctype(_params) to keep names shorter
New fields userdata in User, Contest and Match

--- a/test/fixtures/contests.yml
+++ b/test/fixtures/contests.yml
@@ -5,33 +5,32 @@ DemoMeisterschaft:
   name: Demoturnier Meisterschaft
   shortname: DM
   description: Demoturnier Meisterschaft Beschreibung
-  contesttype: Groups
-  nbr_sets: 2
+  ctype: Groups
   public: false
   token_read: readToken1
   token_write: writeToken1
-  contesttype_params: { grp_groups: nil, points: {win: 3, loss: 0, tie: 1} }
+  ctype_params: { grp_groups: nil }
+  result_params: { winning_sets: 2, points: {win: 3, loss: 0, tie: 1} }
 
 DemoKO:
   user: userOne
   name: Demoturnier KO
   shortname: DKO
   description: Demoturnier KO Beschreibung
-  contesttype: KO
-  nbr_sets: 1
+  ctype: KO
   public: false
   token_read: readToken2
   token_write: readToken2
-
+  result_params: { winning_sets: 1 }
 
 RegressionMeisterschaft:
   user: userTwo
   name: Regressiontest Gruppe
   shortname: Regression Gruppe
   description: Regressiontest Gruppe Beschreibung
-  contesttype: Groups
-  nbr_sets: 1
+  ctype: Groups
   public: false
   token_read: readToken3
   token_write: writeToken3
-  contesttype_params: { grp_groups: nil, points: {win: 3, loss: 0, tie: 1} }
+  ctype_params: { grp_groups: nil }
+  result_params: { winning_sets: 1, points: {win: 3, loss: 0, tie: 1} }
