Compute and save participant rank within the group
Computation of the rankvalue was taken over from the frontend, so the frontend does not have to compute the rank itself any more.
Ranks can be equal for several players and then have gaps, e.g. 1, 2, 2, 4.
Added contest 'Demoturnier Gruppen' with 7 (famous) participants to fixtures in order to have a test contest with 2 groups.

--- a/test/fixtures/contests.yml
+++ b/test/fixtures/contests.yml
@@ -13,6 +13,19 @@ DemoMeisterschaft:
   result_params: { winning_sets: 2, tie_allowed: false,
                     points_win: 3, points_loss: 0, points_tie: 1 }
 
+DemoGruppen:
+  user: userOne
+  name: Demoturnier Gruppen
+  shortname: Demo Gruppen
+  description: Demoturnier Gruppen Beschreibung
+  ctype: Groups
+  public: false
+  token_read: DemoGruppenReader
+  token_write: DemoGruppenWriter
+  ctype_params: { grp_groups: [] }
+  result_params: { winning_sets: 1, tie_allowed: false,
+                    points_win: 2, points_loss: 0, points_tie: 1 }
+
 DemoKO:
   user: userOne
   name: Demoturnier KO
