--- a/test/fixtures/participants.yml
+++ b/test/fixtures/participants.yml
@@ -6,6 +6,17 @@ DM<%= i %>:
   contest: DemoMeisterschaft
   name: Participant DM<%= i %>
   shortname: DM<%= i %>
+  ctype_params: { grp_nr: 1, grp_pos: <%= i %> }
+  remarks: ''
+<% end %>
+
+<% 1.upto(6) do |i| %>
+DKO<%= i %>:
+  user: userOne
+  contest: DemoKO
+  name: Participant DKO<%= i %>
+  shortname: DKO<%= i %>
+  ctype_params: { ko_pos: <%= i==1 ? 1 : (i==6 ? 8 : i + 1) %> }
   remarks: ''
 <% end %>
 
