--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 iturnier2backend.code-workspace
+
+# Ignore generated docs
+/doc/*
