--- a/test/fixtures/participants.yml
+++ b/test/fixtures/participants.yml
@@ -6,7 +6,7 @@ DM<%= i %>:
   contest: DemoMeisterschaft
   name: Participant DM<%= i %>
   shortname: DM<%= i %>
-  ctype_params: { grp_nr: 1, grp_pos: <%= i %> }
+  ctype_params: { draw_group: 1, draw_pos: <%= i %> }
   remarks: ''
 <% end %>
 
@@ -16,7 +16,7 @@ DKO<%= i %>:
   contest: DemoKO
   name: Participant DKO<%= i %>
   shortname: DKO<%= i %>
-  ctype_params: { ko_pos: <%= i==1 ? 1 : (i==6 ? 8 : i + 1) %> }
+  ctype_params: { draw_pos: <%= i==1 ? 1 : (i==6 ? 8 : i + 1) %> }
   remarks: ''
 <% end %>
 
