Improved test coverageAdditional tests, some refactoring and some small corrections driven by the goal to bring code coverage to at least 90% per file.75% of files have now 100%!Only 1 file (integration test) is below 90% because it contains only 4 relevant lines of which one is uncovered.

--- a/test/fixtures/participants.yml
+++ b/test/fixtures/participants.yml
@@ -6,6 +6,7 @@ DM<%= i %>:
   contest: DemoMeisterschaft
   name: Participant DM<%= i %>
   shortname: DM<%= i %>
+  token_write: writeTokenDM<%= i %>
   ctype_params: { draw_group: 1, draw_pos: <%= i %> }
   remarks: ''
 <% end %>
