Create new structure of documentation
Move "next tasks" and similar items from README to github issues.
Restructure the whole README with clearer project definition and goals, possible contributions and so on.
Refer to the Postman documentation to describe the requests in detail.
Copied text from the README to the static html home page.

Correct some details showing up while improving the Postman documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,10 @@
 
 .DS_Store
 .byebug_history
+*.code-workspace
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-iturnier2backend.code-workspace
 
 # Ignore generated docs
 /coverage/*
